# PortAuthority

./: .flake8  Dockerfile  README.md  compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: test.yml
issues/: tar-error-deploy-ready-job.md  tar-error-in-deploy-ready-job.md
portauthority/: asgi.py  settings.py  urls.py  wsgi.py
registry/: admin.py  models.py  tests.py  urls.py  views.py
registry/migrations/: 0001_initial.py  0002_alter_application_options_alter_application_port.py
registry/static/registry/css/: styles.css
registry/static/registry/js/: application_list.js
registry/templates/registry/: application_list.html
static/css/: styles.css
