[project]
name = "portauthority"
version = "0.0.1"
description = "Can't you remember the custom ports of your app? Setup a manager registering your applications for one-click access."
authors = [
    { name = "Segelzwerg", email = "25705862+Segelzwerg@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
bandit = "^1.8.6"
coverage = "^7.10.1"
pytest-cov = "^6.2.1"
pytest-django = "^4.11.1"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''
[tool.flake8]
max-line-length = 88
max-complexity = 10
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    ".tox",
    ".eggs",
    "*.egg",
    "build",
    "dist",
    "migrations",
    "*/migrations/*",
    "node_modules",
    "site-packages",
    "*/site-packages/*"
]
ignore = [
    "E203", # whitespace before ':'
    "E501", # line too long (handled by black)
    "W503", # line break before binary operator
    "W504", # line break after binary operator
]
per-file-ignores = [
    "__init__.py:F401", # imported but unused
    "settings.py:E501", # long lines in settings are often unavoidable
]