[project]
name = "portauthority"
version = "0.0.1"
description = "Can't you remember the custom ports of your app? Setup a manager registering your applications for one-click access."
authors = [
    { name = "Segelzwerg", email = "25705862+Segelzwerg@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
    { include = "portauthority" },
    { include = "registry" }
]
include = [
    { path = "locale", format = ["sdist", "wheel"] },
    { path = "static", format = ["sdist", "wheel"] },
    { path = "templates", format = ["sdist", "wheel"] }
]
[tool.poetry.dependencies]
django = "^5.2"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
bandit = "^1.8.6"
coverage = "^7.10.1"
pytest-cov = "^6.2.1"
pytest-django = "^4.11.1"
safety = "^3.6.0"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''
